y.output
   0  $accept : programa $end

   1  programa : IDENTIFICADOR sentencias_declarativas BEGIN sentencias_ejecutables END

   2  sentencias_declarativas :
   3                          | sentencias_declarativas sentencia_declarativa

   4  sentencia_declarativa : declaracion_variables
   5                        | declaracion_funcion
   6                        | declaracion_clase
   7                        | declaracion_objeto
   8                        | declaracion_comptime

   9  tipo : SHORTINT
  10       | SINGLEF

  11  declaracion_variables : tipo lista_identificadores ';'

  12  lista_identificadores : IDENTIFICADOR
  13                        | lista_identificadores ',' IDENTIFICADOR

  14  declaracion_comptime : COMPTIME tipo lista_identificadores ';'

  15  declaracion_funcion : tipo FUNCTION IDENTIFICADOR '(' parametros_formales ')' sentencias_declarativas BEGIN sentencias_ejecutables END ';'
  16                      | AUTO FUNCTION IDENTIFICADOR '(' parametros_formales ')' BEGIN sentencias_ejecutables END ';'

  17  parametros_formales : parametro
  18                      | parametros_formales ',' parametro

  19  parametro : tipo IDENTIFICADOR

  20  declaracion_clase : CLASS IDENTIFICADOR clausula_import BEGIN miembros_clase END ';'

  21  clausula_import :
  22                  | IMPORT FROM lista_identificadores

  23  miembros_clase :
  24                 | miembros_clase miembro_clase

  25  miembro_clase : tipo IDENTIFICADOR clausula_export ';'
  26                | tipo IDENTIFICADOR '(' parametros_formales ')' BEGIN sentencias_ejecutables END ';' clausula_export_opt
  27                | EXTENDS lista_identificadores ';'

  28  clausula_export :
  29                  | EXPORT TO lista_identificadores

  30  clausula_export_opt :
  31                      | EXPORT TO lista_identificadores ';'

  32  declaracion_objeto : IDENTIFICADOR lista_identificadores ';'

  33  sentencias_ejecutables :
  34                         | sentencias_ejecutables sentencia_ejecutable

  35  sentencia_ejecutable : asignacion ';'
  36                       | invocacion ';'
  37                       | sentencia_if
  38                       | sentencia_pout ';'
  39                       | sentencia_ret ';'
  40                       | sentencia_repeat_until

  41  bloque : BEGIN sentencias_ejecutables END

  42  bloque_o_sentencia : sentencia_ejecutable
  43                     | bloque

  44  asignacion : IDENTIFICADOR ASIGNAR expresion
  45             | acceso_atributo ASIGNAR expresion
  46             | acceso_posicional ASIGNAR expresion

  47  acceso_atributo : IDENTIFICADOR '.' IDENTIFICADOR

  48  acceso_posicional : IDENTIFICADOR '[' expresion ']'

  49  invocacion : IDENTIFICADOR '(' lista_parametros_reales ')'
  50             | IDENTIFICADOR '.' IDENTIFICADOR '(' lista_parametros_reales ')'

  51  lista_parametros_reales : expresion
  52                          | lista_parametros_reales ',' expresion

  53  sentencia_if : IF '(' condicion ')' bloque_o_sentencia ELSE bloque_o_sentencia END_IF ';'
  54               | IF '(' condicion ')' bloque_o_sentencia END_IF ';'

  55  condicion : expresion comparador expresion

  56  comparador : MAYORIGUAL
  57             | MENORIGUAL
  58             | IGUALIGUAL
  59             | DISTINTO
  60             | '>'
  61             | '<'

  62  sentencia_pout : POUT '(' expresion ')'
  63                 | POUT '(' CADENA ')'

  64  sentencia_ret : RET '(' expresion ')'

  65  sentencia_repeat_until : REPEAT bloque_o_sentencia UNTIL '(' condicion ')' ';'

  66  expresion : termino
  67            | expresion '+' termino
  68            | expresion '-' termino

  69  termino : factor
  70          | termino '*' factor
  71          | termino '/' factor

  72  factor : IDENTIFICADOR
  73         | CONSTANTE
  74         | invocacion
  75         | acceso_atributo
  76         | acceso_posicional
  77         | TOS '(' expresion ')'
  78         | IDENTIFICADOR '=' '(' expresion ')'

state 0
	$accept : . programa $end  (0)

	IDENTIFICADOR  shift 1
	.  error

	programa  goto 2


state 1
	programa : IDENTIFICADOR . sentencias_declarativas BEGIN sentencias_ejecutables END  (1)
	sentencias_declarativas : .  (2)

	.  reduce 2

	sentencias_declarativas  goto 3


state 2
	$accept : programa . $end  (0)

	$end  accept


state 3
	programa : IDENTIFICADOR sentencias_declarativas . BEGIN sentencias_ejecutables END  (1)
	sentencias_declarativas : sentencias_declarativas . sentencia_declarativa  (3)

	IDENTIFICADOR  shift 4
	BEGIN  shift 5
	CLASS  shift 6
	SHORTINT  shift 7
	SINGLEF  shift 8
	AUTO  shift 9
	COMPTIME  shift 10
	.  error

	sentencia_declarativa  goto 11
	declaracion_variables  goto 12
	declaracion_funcion  goto 13
	declaracion_clase  goto 14
	declaracion_objeto  goto 15
	declaracion_comptime  goto 16
	tipo  goto 17


state 4
	declaracion_objeto : IDENTIFICADOR . lista_identificadores ';'  (32)

	IDENTIFICADOR  shift 18
	.  error

	lista_identificadores  goto 19


state 5
	programa : IDENTIFICADOR sentencias_declarativas BEGIN . sentencias_ejecutables END  (1)
	sentencias_ejecutables : .  (33)

	.  reduce 33

	sentencias_ejecutables  goto 20


state 6
	declaracion_clase : CLASS . IDENTIFICADOR clausula_import BEGIN miembros_clase END ';'  (20)

	IDENTIFICADOR  shift 21
	.  error


state 7
	tipo : SHORTINT .  (9)

	.  reduce 9


state 8
	tipo : SINGLEF .  (10)

	.  reduce 10


state 9
	declaracion_funcion : AUTO . FUNCTION IDENTIFICADOR '(' parametros_formales ')' BEGIN sentencias_ejecutables END ';'  (16)

	FUNCTION  shift 22
	.  error


state 10
	declaracion_comptime : COMPTIME . tipo lista_identificadores ';'  (14)

	SHORTINT  shift 7
	SINGLEF  shift 8
	.  error

	tipo  goto 23


state 11
	sentencias_declarativas : sentencias_declarativas sentencia_declarativa .  (3)

	.  reduce 3


state 12
	sentencia_declarativa : declaracion_variables .  (4)

	.  reduce 4


state 13
	sentencia_declarativa : declaracion_funcion .  (5)

	.  reduce 5


state 14
	sentencia_declarativa : declaracion_clase .  (6)

	.  reduce 6


state 15
	sentencia_declarativa : declaracion_objeto .  (7)

	.  reduce 7


state 16
	sentencia_declarativa : declaracion_comptime .  (8)

	.  reduce 8


state 17
	declaracion_variables : tipo . lista_identificadores ';'  (11)
	declaracion_funcion : tipo . FUNCTION IDENTIFICADOR '(' parametros_formales ')' sentencias_declarativas BEGIN sentencias_ejecutables END ';'  (15)

	IDENTIFICADOR  shift 18
	FUNCTION  shift 24
	.  error

	lista_identificadores  goto 25


state 18
	lista_identificadores : IDENTIFICADOR .  (12)

	.  reduce 12


state 19
	lista_identificadores : lista_identificadores . ',' IDENTIFICADOR  (13)
	declaracion_objeto : IDENTIFICADOR lista_identificadores . ';'  (32)

	';'  shift 26
	','  shift 27
	.  error


state 20
	programa : IDENTIFICADOR sentencias_declarativas BEGIN sentencias_ejecutables . END  (1)
	sentencias_ejecutables : sentencias_ejecutables . sentencia_ejecutable  (34)

	IDENTIFICADOR  shift 28
	IF  shift 29
	END  shift 30
	POUT  shift 31
	RET  shift 32
	REPEAT  shift 33
	.  error

	sentencia_ejecutable  goto 34
	asignacion  goto 35
	invocacion  goto 36
	sentencia_if  goto 37
	sentencia_pout  goto 38
	sentencia_ret  goto 39
	sentencia_repeat_until  goto 40
	acceso_atributo  goto 41
	acceso_posicional  goto 42


state 21
	declaracion_clase : CLASS IDENTIFICADOR . clausula_import BEGIN miembros_clase END ';'  (20)
	clausula_import : .  (21)

	IMPORT  shift 43
	BEGIN  reduce 21

	clausula_import  goto 44


state 22
	declaracion_funcion : AUTO FUNCTION . IDENTIFICADOR '(' parametros_formales ')' BEGIN sentencias_ejecutables END ';'  (16)

	IDENTIFICADOR  shift 45
	.  error


state 23
	declaracion_comptime : COMPTIME tipo . lista_identificadores ';'  (14)

	IDENTIFICADOR  shift 18
	.  error

	lista_identificadores  goto 46


state 24
	declaracion_funcion : tipo FUNCTION . IDENTIFICADOR '(' parametros_formales ')' sentencias_declarativas BEGIN sentencias_ejecutables END ';'  (15)

	IDENTIFICADOR  shift 47
	.  error


state 25
	declaracion_variables : tipo lista_identificadores . ';'  (11)
	lista_identificadores : lista_identificadores . ',' IDENTIFICADOR  (13)

	';'  shift 48
	','  shift 27
	.  error


state 26
	declaracion_objeto : IDENTIFICADOR lista_identificadores ';' .  (32)

	.  reduce 32


state 27
	lista_identificadores : lista_identificadores ',' . IDENTIFICADOR  (13)

	IDENTIFICADOR  shift 49
	.  error


state 28
	asignacion : IDENTIFICADOR . ASIGNAR expresion  (44)
	acceso_atributo : IDENTIFICADOR . '.' IDENTIFICADOR  (47)
	acceso_posicional : IDENTIFICADOR . '[' expresion ']'  (48)
	invocacion : IDENTIFICADOR . '(' lista_parametros_reales ')'  (49)
	invocacion : IDENTIFICADOR . '.' IDENTIFICADOR '(' lista_parametros_reales ')'  (50)

	ASIGNAR  shift 50
	'('  shift 51
	'.'  shift 52
	'['  shift 53
	.  error


state 29
	sentencia_if : IF . '(' condicion ')' bloque_o_sentencia ELSE bloque_o_sentencia END_IF ';'  (53)
	sentencia_if : IF . '(' condicion ')' bloque_o_sentencia END_IF ';'  (54)

	'('  shift 54
	.  error


state 30
	programa : IDENTIFICADOR sentencias_declarativas BEGIN sentencias_ejecutables END .  (1)

	.  reduce 1


state 31
	sentencia_pout : POUT . '(' expresion ')'  (62)
	sentencia_pout : POUT . '(' CADENA ')'  (63)

	'('  shift 55
	.  error


state 32
	sentencia_ret : RET . '(' expresion ')'  (64)

	'('  shift 56
	.  error


state 33
	sentencia_repeat_until : REPEAT . bloque_o_sentencia UNTIL '(' condicion ')' ';'  (65)

	IDENTIFICADOR  shift 28
	IF  shift 29
	BEGIN  shift 57
	POUT  shift 31
	RET  shift 32
	REPEAT  shift 33
	.  error

	sentencia_ejecutable  goto 58
	asignacion  goto 35
	invocacion  goto 36
	sentencia_if  goto 37
	sentencia_pout  goto 38
	sentencia_ret  goto 39
	sentencia_repeat_until  goto 40
	bloque  goto 59
	bloque_o_sentencia  goto 60
	acceso_atributo  goto 41
	acceso_posicional  goto 42


state 34
	sentencias_ejecutables : sentencias_ejecutables sentencia_ejecutable .  (34)

	.  reduce 34


state 35
	sentencia_ejecutable : asignacion . ';'  (35)

	';'  shift 61
	.  error


state 36
	sentencia_ejecutable : invocacion . ';'  (36)

	';'  shift 62
	.  error


state 37
	sentencia_ejecutable : sentencia_if .  (37)

	.  reduce 37


state 38
	sentencia_ejecutable : sentencia_pout . ';'  (38)

	';'  shift 63
	.  error


state 39
	sentencia_ejecutable : sentencia_ret . ';'  (39)

	';'  shift 64
	.  error


state 40
	sentencia_ejecutable : sentencia_repeat_until .  (40)

	.  reduce 40


state 41
	asignacion : acceso_atributo . ASIGNAR expresion  (45)

	ASIGNAR  shift 65
	.  error


state 42
	asignacion : acceso_posicional . ASIGNAR expresion  (46)

	ASIGNAR  shift 66
	.  error


state 43
	clausula_import : IMPORT . FROM lista_identificadores  (22)

	FROM  shift 67
	.  error


state 44
	declaracion_clase : CLASS IDENTIFICADOR clausula_import . BEGIN miembros_clase END ';'  (20)

	BEGIN  shift 68
	.  error


state 45
	declaracion_funcion : AUTO FUNCTION IDENTIFICADOR . '(' parametros_formales ')' BEGIN sentencias_ejecutables END ';'  (16)

	'('  shift 69
	.  error


state 46
	lista_identificadores : lista_identificadores . ',' IDENTIFICADOR  (13)
	declaracion_comptime : COMPTIME tipo lista_identificadores . ';'  (14)

	';'  shift 70
	','  shift 27
	.  error


state 47
	declaracion_funcion : tipo FUNCTION IDENTIFICADOR . '(' parametros_formales ')' sentencias_declarativas BEGIN sentencias_ejecutables END ';'  (15)

	'('  shift 71
	.  error


state 48
	declaracion_variables : tipo lista_identificadores ';' .  (11)

	.  reduce 11


state 49
	lista_identificadores : lista_identificadores ',' IDENTIFICADOR .  (13)

	.  reduce 13


state 50
	asignacion : IDENTIFICADOR ASIGNAR . expresion  (44)

	IDENTIFICADOR  shift 72
	CONSTANTE  shift 73
	TOS  shift 74
	.  error

	invocacion  goto 75
	expresion  goto 76
	acceso_atributo  goto 77
	acceso_posicional  goto 78
	termino  goto 79
	factor  goto 80


state 51
	invocacion : IDENTIFICADOR '(' . lista_parametros_reales ')'  (49)

	IDENTIFICADOR  shift 72
	CONSTANTE  shift 73
	TOS  shift 74
	.  error

	invocacion  goto 75
	expresion  goto 81
	acceso_atributo  goto 77
	acceso_posicional  goto 78
	lista_parametros_reales  goto 82
	termino  goto 79
	factor  goto 80


state 52
	acceso_atributo : IDENTIFICADOR '.' . IDENTIFICADOR  (47)
	invocacion : IDENTIFICADOR '.' . IDENTIFICADOR '(' lista_parametros_reales ')'  (50)

	IDENTIFICADOR  shift 83
	.  error


state 53
	acceso_posicional : IDENTIFICADOR '[' . expresion ']'  (48)

	IDENTIFICADOR  shift 72
	CONSTANTE  shift 73
	TOS  shift 74
	.  error

	invocacion  goto 75
	expresion  goto 84
	acceso_atributo  goto 77
	acceso_posicional  goto 78
	termino  goto 79
	factor  goto 80


state 54
	sentencia_if : IF '(' . condicion ')' bloque_o_sentencia ELSE bloque_o_sentencia END_IF ';'  (53)
	sentencia_if : IF '(' . condicion ')' bloque_o_sentencia END_IF ';'  (54)

	IDENTIFICADOR  shift 72
	CONSTANTE  shift 73
	TOS  shift 74
	.  error

	invocacion  goto 75
	expresion  goto 85
	acceso_atributo  goto 77
	acceso_posicional  goto 78
	condicion  goto 86
	termino  goto 79
	factor  goto 80


state 55
	sentencia_pout : POUT '(' . expresion ')'  (62)
	sentencia_pout : POUT '(' . CADENA ')'  (63)

	IDENTIFICADOR  shift 72
	CONSTANTE  shift 73
	CADENA  shift 87
	TOS  shift 74
	.  error

	invocacion  goto 75
	expresion  goto 88
	acceso_atributo  goto 77
	acceso_posicional  goto 78
	termino  goto 79
	factor  goto 80


state 56
	sentencia_ret : RET '(' . expresion ')'  (64)

	IDENTIFICADOR  shift 72
	CONSTANTE  shift 73
	TOS  shift 74
	.  error

	invocacion  goto 75
	expresion  goto 89
	acceso_atributo  goto 77
	acceso_posicional  goto 78
	termino  goto 79
	factor  goto 80


state 57
	bloque : BEGIN . sentencias_ejecutables END  (41)
	sentencias_ejecutables : .  (33)

	.  reduce 33

	sentencias_ejecutables  goto 90


state 58
	bloque_o_sentencia : sentencia_ejecutable .  (42)

	.  reduce 42


state 59
	bloque_o_sentencia : bloque .  (43)

	.  reduce 43


state 60
	sentencia_repeat_until : REPEAT bloque_o_sentencia . UNTIL '(' condicion ')' ';'  (65)

	UNTIL  shift 91
	.  error


state 61
	sentencia_ejecutable : asignacion ';' .  (35)

	.  reduce 35


state 62
	sentencia_ejecutable : invocacion ';' .  (36)

	.  reduce 36


state 63
	sentencia_ejecutable : sentencia_pout ';' .  (38)

	.  reduce 38


state 64
	sentencia_ejecutable : sentencia_ret ';' .  (39)

	.  reduce 39


state 65
	asignacion : acceso_atributo ASIGNAR . expresion  (45)

	IDENTIFICADOR  shift 72
	CONSTANTE  shift 73
	TOS  shift 74
	.  error

	invocacion  goto 75
	expresion  goto 92
	acceso_atributo  goto 77
	acceso_posicional  goto 78
	termino  goto 79
	factor  goto 80


state 66
	asignacion : acceso_posicional ASIGNAR . expresion  (46)

	IDENTIFICADOR  shift 72
	CONSTANTE  shift 73
	TOS  shift 74
	.  error

	invocacion  goto 75
	expresion  goto 93
	acceso_atributo  goto 77
	acceso_posicional  goto 78
	termino  goto 79
	factor  goto 80


state 67
	clausula_import : IMPORT FROM . lista_identificadores  (22)

	IDENTIFICADOR  shift 18
	.  error

	lista_identificadores  goto 94


state 68
	declaracion_clase : CLASS IDENTIFICADOR clausula_import BEGIN . miembros_clase END ';'  (20)
	miembros_clase : .  (23)

	.  reduce 23

	miembros_clase  goto 95


state 69
	declaracion_funcion : AUTO FUNCTION IDENTIFICADOR '(' . parametros_formales ')' BEGIN sentencias_ejecutables END ';'  (16)

	SHORTINT  shift 7
	SINGLEF  shift 8
	.  error

	tipo  goto 96
	parametros_formales  goto 97
	parametro  goto 98


state 70
	declaracion_comptime : COMPTIME tipo lista_identificadores ';' .  (14)

	.  reduce 14


state 71
	declaracion_funcion : tipo FUNCTION IDENTIFICADOR '(' . parametros_formales ')' sentencias_declarativas BEGIN sentencias_ejecutables END ';'  (15)

	SHORTINT  shift 7
	SINGLEF  shift 8
	.  error

	tipo  goto 96
	parametros_formales  goto 99
	parametro  goto 98


state 72
	acceso_atributo : IDENTIFICADOR . '.' IDENTIFICADOR  (47)
	acceso_posicional : IDENTIFICADOR . '[' expresion ']'  (48)
	invocacion : IDENTIFICADOR . '(' lista_parametros_reales ')'  (49)
	invocacion : IDENTIFICADOR . '.' IDENTIFICADOR '(' lista_parametros_reales ')'  (50)
	factor : IDENTIFICADOR .  (72)
	factor : IDENTIFICADOR . '=' '(' expresion ')'  (78)

	'('  shift 51
	'.'  shift 52
	'['  shift 53
	'='  shift 100
	MAYORIGUAL  reduce 72
	MENORIGUAL  reduce 72
	IGUALIGUAL  reduce 72
	DISTINTO  reduce 72
	'+'  reduce 72
	'-'  reduce 72
	'*'  reduce 72
	'/'  reduce 72
	';'  reduce 72
	','  reduce 72
	')'  reduce 72
	']'  reduce 72
	'>'  reduce 72
	'<'  reduce 72


state 73
	factor : CONSTANTE .  (73)

	.  reduce 73


state 74
	factor : TOS . '(' expresion ')'  (77)

	'('  shift 101
	.  error


state 75
	factor : invocacion .  (74)

	.  reduce 74


state 76
	asignacion : IDENTIFICADOR ASIGNAR expresion .  (44)
	expresion : expresion . '+' termino  (67)
	expresion : expresion . '-' termino  (68)

	'+'  shift 102
	'-'  shift 103
	';'  reduce 44


state 77
	factor : acceso_atributo .  (75)

	.  reduce 75


state 78
	factor : acceso_posicional .  (76)

	.  reduce 76


state 79
	expresion : termino .  (66)
	termino : termino . '*' factor  (70)
	termino : termino . '/' factor  (71)

	'*'  shift 104
	'/'  shift 105
	MAYORIGUAL  reduce 66
	MENORIGUAL  reduce 66
	IGUALIGUAL  reduce 66
	DISTINTO  reduce 66
	'+'  reduce 66
	'-'  reduce 66
	';'  reduce 66
	','  reduce 66
	')'  reduce 66
	']'  reduce 66
	'>'  reduce 66
	'<'  reduce 66


state 80
	termino : factor .  (69)

	.  reduce 69


state 81
	lista_parametros_reales : expresion .  (51)
	expresion : expresion . '+' termino  (67)
	expresion : expresion . '-' termino  (68)

	'+'  shift 102
	'-'  shift 103
	','  reduce 51
	')'  reduce 51


state 82
	invocacion : IDENTIFICADOR '(' lista_parametros_reales . ')'  (49)
	lista_parametros_reales : lista_parametros_reales . ',' expresion  (52)

	','  shift 106
	')'  shift 107
	.  error


state 83
	acceso_atributo : IDENTIFICADOR '.' IDENTIFICADOR .  (47)
	invocacion : IDENTIFICADOR '.' IDENTIFICADOR . '(' lista_parametros_reales ')'  (50)

	'('  shift 108
	ASIGNAR  reduce 47
	MAYORIGUAL  reduce 47
	MENORIGUAL  reduce 47
	IGUALIGUAL  reduce 47
	DISTINTO  reduce 47
	'+'  reduce 47
	'-'  reduce 47
	'*'  reduce 47
	'/'  reduce 47
	';'  reduce 47
	','  reduce 47
	')'  reduce 47
	']'  reduce 47
	'>'  reduce 47
	'<'  reduce 47


state 84
	acceso_posicional : IDENTIFICADOR '[' expresion . ']'  (48)
	expresion : expresion . '+' termino  (67)
	expresion : expresion . '-' termino  (68)

	'+'  shift 102
	'-'  shift 103
	']'  shift 109
	.  error


state 85
	condicion : expresion . comparador expresion  (55)
	expresion : expresion . '+' termino  (67)
	expresion : expresion . '-' termino  (68)

	MAYORIGUAL  shift 110
	MENORIGUAL  shift 111
	IGUALIGUAL  shift 112
	DISTINTO  shift 113
	'+'  shift 102
	'-'  shift 103
	'>'  shift 114
	'<'  shift 115
	.  error

	comparador  goto 116


state 86
	sentencia_if : IF '(' condicion . ')' bloque_o_sentencia ELSE bloque_o_sentencia END_IF ';'  (53)
	sentencia_if : IF '(' condicion . ')' bloque_o_sentencia END_IF ';'  (54)

	')'  shift 117
	.  error


state 87
	sentencia_pout : POUT '(' CADENA . ')'  (63)

	')'  shift 118
	.  error


state 88
	sentencia_pout : POUT '(' expresion . ')'  (62)
	expresion : expresion . '+' termino  (67)
	expresion : expresion . '-' termino  (68)

	'+'  shift 102
	'-'  shift 103
	')'  shift 119
	.  error


state 89
	sentencia_ret : RET '(' expresion . ')'  (64)
	expresion : expresion . '+' termino  (67)
	expresion : expresion . '-' termino  (68)

	'+'  shift 102
	'-'  shift 103
	')'  shift 120
	.  error


state 90
	sentencias_ejecutables : sentencias_ejecutables . sentencia_ejecutable  (34)
	bloque : BEGIN sentencias_ejecutables . END  (41)

	IDENTIFICADOR  shift 28
	IF  shift 29
	END  shift 121
	POUT  shift 31
	RET  shift 32
	REPEAT  shift 33
	.  error

	sentencia_ejecutable  goto 34
	asignacion  goto 35
	invocacion  goto 36
	sentencia_if  goto 37
	sentencia_pout  goto 38
	sentencia_ret  goto 39
	sentencia_repeat_until  goto 40
	acceso_atributo  goto 41
	acceso_posicional  goto 42


state 91
	sentencia_repeat_until : REPEAT bloque_o_sentencia UNTIL . '(' condicion ')' ';'  (65)

	'('  shift 122
	.  error


state 92
	asignacion : acceso_atributo ASIGNAR expresion .  (45)
	expresion : expresion . '+' termino  (67)
	expresion : expresion . '-' termino  (68)

	'+'  shift 102
	'-'  shift 103
	';'  reduce 45


state 93
	asignacion : acceso_posicional ASIGNAR expresion .  (46)
	expresion : expresion . '+' termino  (67)
	expresion : expresion . '-' termino  (68)

	'+'  shift 102
	'-'  shift 103
	';'  reduce 46


state 94
	lista_identificadores : lista_identificadores . ',' IDENTIFICADOR  (13)
	clausula_import : IMPORT FROM lista_identificadores .  (22)

	','  shift 27
	BEGIN  reduce 22


state 95
	declaracion_clase : CLASS IDENTIFICADOR clausula_import BEGIN miembros_clase . END ';'  (20)
	miembros_clase : miembros_clase . miembro_clase  (24)

	END  shift 123
	SHORTINT  shift 7
	SINGLEF  shift 8
	EXTENDS  shift 124
	.  error

	tipo  goto 125
	miembro_clase  goto 126


state 96
	parametro : tipo . IDENTIFICADOR  (19)

	IDENTIFICADOR  shift 127
	.  error


state 97
	declaracion_funcion : AUTO FUNCTION IDENTIFICADOR '(' parametros_formales . ')' BEGIN sentencias_ejecutables END ';'  (16)
	parametros_formales : parametros_formales . ',' parametro  (18)

	','  shift 128
	')'  shift 129
	.  error


state 98
	parametros_formales : parametro .  (17)

	.  reduce 17


state 99
	declaracion_funcion : tipo FUNCTION IDENTIFICADOR '(' parametros_formales . ')' sentencias_declarativas BEGIN sentencias_ejecutables END ';'  (15)
	parametros_formales : parametros_formales . ',' parametro  (18)

	','  shift 128
	')'  shift 130
	.  error


state 100
	factor : IDENTIFICADOR '=' . '(' expresion ')'  (78)

	'('  shift 131
	.  error


state 101
	factor : TOS '(' . expresion ')'  (77)

	IDENTIFICADOR  shift 72
	CONSTANTE  shift 73
	TOS  shift 74
	.  error

	invocacion  goto 75
	expresion  goto 132
	acceso_atributo  goto 77
	acceso_posicional  goto 78
	termino  goto 79
	factor  goto 80


state 102
	expresion : expresion '+' . termino  (67)

	IDENTIFICADOR  shift 72
	CONSTANTE  shift 73
	TOS  shift 74
	.  error

	invocacion  goto 75
	acceso_atributo  goto 77
	acceso_posicional  goto 78
	termino  goto 133
	factor  goto 80


state 103
	expresion : expresion '-' . termino  (68)

	IDENTIFICADOR  shift 72
	CONSTANTE  shift 73
	TOS  shift 74
	.  error

	invocacion  goto 75
	acceso_atributo  goto 77
	acceso_posicional  goto 78
	termino  goto 134
	factor  goto 80


state 104
	termino : termino '*' . factor  (70)

	IDENTIFICADOR  shift 72
	CONSTANTE  shift 73
	TOS  shift 74
	.  error

	invocacion  goto 75
	acceso_atributo  goto 77
	acceso_posicional  goto 78
	factor  goto 135


state 105
	termino : termino '/' . factor  (71)

	IDENTIFICADOR  shift 72
	CONSTANTE  shift 73
	TOS  shift 74
	.  error

	invocacion  goto 75
	acceso_atributo  goto 77
	acceso_posicional  goto 78
	factor  goto 136


state 106
	lista_parametros_reales : lista_parametros_reales ',' . expresion  (52)

	IDENTIFICADOR  shift 72
	CONSTANTE  shift 73
	TOS  shift 74
	.  error
